# hexlet

./: Makefile  README.md  pyproject.toml
brain_games/: calculator.py  gcd.py  is_even.py  is_prime.py  progression.py
